Issue #26 updated css to collapse the notifications so they aren't so large

--- a/assets/scss/mesh/_structure.scss
+++ b/assets/scss/mesh/_structure.scss
@@ -188,6 +188,10 @@
 		bottom: $base * 2;
 		top: $base * 2;
 	};
+
+    &.collapse {
+	  padding:1px 12px;
+	}
 }
 
 
